// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when no summary is present renders correctly  1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: border,box-shadow;
  border: 1px solid #E8EDEB;
  box-shadow: 0 4px 10px -4px rgba(0,30,43,0.3);
  background-color: white;
  color: #1C2D38;
  border-radius: 24px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  line-height: 20px;
  padding: 24px;
  min-height: 68px;
  padding: 0;
  margin-bottom: 16px;
  overflow: hidden;
}

.emotion-1 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  background-color: #F9FBFA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 16px 32px;
}

.emotion-1>*:not(:last-child) {
  margin-right: 16px;
}

@media only screen and (max-width: 480px) {
  .emotion-1 {
    padding: 16px;
  }
}

.emotion-3 {
  font-family: Euclid Circular A,‘Helvetica Neue’,Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  border-radius: 5px;
  height: 18px;
  padding-left: 6px;
  padding-right: 6px;
  text-transform: uppercase;
  border: 1px solid;
  letter-spacing: 1px;
  background-color: #E1F7FF;
  border-color: #C3E7FE;
  color: #1254B7;
}

.emotion-4 {
  color: #001E2B;
}

@media only screen and (max-width: 480px) {
  .emotion-4 {
    word-break: break-all;
  }
}

.emotion-6 {
  top: -5px;
  margin-left: 4px;
  position: relative;
}

.emotion-7 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #889397;
}

.emotion-8 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  color: #89979B;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
}

.emotion-8:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-8:active:before,
.emotion-8:hover:before,
.emotion-8:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:active,
.emotion-8:hover {
  color: #3D4F58;
}

.emotion-8:active:before,
.emotion-8:hover:before {
  background-color: #E7EEEC;
}

.emotion-8:focus {
  color: #1A567E;
}

.emotion-8:focus:before {
  background-color: #C5E4F2;
}

.emotion-9 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  top: -5px;
  margin-left: auto;
}

.emotion-13 {
  margin: 24px 32px;
}

@media only screen and (max-width: 480px) {
  .emotion-13 {
    margin: 16px;
  }
}

.emotion-13>p {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.emotion-15 {
  margin: unset;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
}

.emotion-15 strong,
.emotion-15 b {
  font-weight: 700;
}

<div
    class="emotion-0"
    id="get-/auth/providers"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        GET
      </div>
      <div>
        <code
          class="emotion-4 emotion-5"
        >
          /​auth/​providers
        </code>
        <span
          class="emotion-6"
        >
          <button
            aria-disabled="false"
            aria-label="Copy"
            class="emotion-7 emotion-8"
            tabindex="0"
          >
            <div
              class="emotion-9"
            >
              <svg
                aria-label="Copy Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1zm8-.928L7.257 6.498A.857.857 0 007 7.11v.688h3.01a.857.857 0 00.857-.858V4h-.717a.857.857 0 00-.6.246l-.55.54zM4.867 1H4.15a.857.857 0 00-.601.246L1.257 3.498A.857.857 0 001 4.11v.688h3.01a.857.857 0 00.857-.858V1zM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 017 13.286V12z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </span>
      </div>
      <button
        aria-disabled="false"
        aria-label="Show operation details"
        class="emotion-10 emotion-8"
        tabindex="0"
      >
        <div
          class="emotion-9"
        >
          <svg
            aria-label="Chevron Down Icon"
            class=""
            fill="none"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M1.636 5.364a1 1 0 000 1.414l4.95 4.95.707.707a1 1 0 001.414 0l.707-.707 4.95-4.95a1 1 0 000-1.414l-.707-.707a1 1 0 00-1.414 0L8 8.899 3.757 4.657a1 1 0 00-1.414 0l-.707.707z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="emotion-13 emotion-14"
    >
      <p
        class="emotion-15"
      >
        This is a description. Lorem ipsum dolor sit amet, consectetur adipiscing
elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
mollit anim id est laborum.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when no summary or description is present renders correctly  1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: border,box-shadow;
  border: 1px solid #E8EDEB;
  box-shadow: 0 4px 10px -4px rgba(0,30,43,0.3);
  background-color: white;
  color: #1C2D38;
  border-radius: 24px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  line-height: 20px;
  padding: 24px;
  min-height: 68px;
  padding: 0;
  margin-bottom: 16px;
  overflow: hidden;
}

.emotion-1 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  background-color: #F9FBFA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 16px 32px;
}

.emotion-1>*:not(:last-child) {
  margin-right: 16px;
}

@media only screen and (max-width: 480px) {
  .emotion-1 {
    padding: 16px;
  }
}

.emotion-3 {
  font-family: Euclid Circular A,‘Helvetica Neue’,Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  border-radius: 5px;
  height: 18px;
  padding-left: 6px;
  padding-right: 6px;
  text-transform: uppercase;
  border: 1px solid;
  letter-spacing: 1px;
  background-color: #E3FCF7;
  border-color: #C0FAE6;
  color: #00684A;
}

.emotion-4 {
  color: #001E2B;
}

@media only screen and (max-width: 480px) {
  .emotion-4 {
    word-break: break-all;
  }
}

.emotion-6 {
  top: -5px;
  margin-left: 4px;
  position: relative;
}

.emotion-7 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #889397;
}

.emotion-8 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  color: #89979B;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
}

.emotion-8:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-8:active:before,
.emotion-8:hover:before,
.emotion-8:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:active,
.emotion-8:hover {
  color: #3D4F58;
}

.emotion-8:active:before,
.emotion-8:hover:before {
  background-color: #E7EEEC;
}

.emotion-8:focus {
  color: #1A567E;
}

.emotion-8:focus:before {
  background-color: #C5E4F2;
}

.emotion-9 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  top: -5px;
  margin-left: auto;
}

<div
    class="emotion-0"
    id="post-/auth/providers/{provider}/login"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        POST
      </div>
      <div>
        <code
          class="emotion-4 emotion-5"
        >
          /​auth/​providers/​
          <strong>
            {provider}
          </strong>
          /​login
        </code>
        <span
          class="emotion-6"
        >
          <button
            aria-disabled="false"
            aria-label="Copy"
            class="emotion-7 emotion-8"
            tabindex="0"
          >
            <div
              class="emotion-9"
            >
              <svg
                aria-label="Copy Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1zm8-.928L7.257 6.498A.857.857 0 007 7.11v.688h3.01a.857.857 0 00.857-.858V4h-.717a.857.857 0 00-.6.246l-.55.54zM4.867 1H4.15a.857.857 0 00-.601.246L1.257 3.498A.857.857 0 001 4.11v.688h3.01a.857.857 0 00.857-.858V1zM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 017 13.286V12z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </span>
      </div>
      <button
        aria-disabled="false"
        aria-label="Show operation details"
        class="emotion-10 emotion-8"
        tabindex="0"
      >
        <div
          class="emotion-9"
        >
          <svg
            aria-label="Chevron Down Icon"
            class=""
            fill="none"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M1.636 5.364a1 1 0 000 1.414l4.95 4.95.707.707a1 1 0 001.414 0l.707-.707 4.95-4.95a1 1 0 000-1.414l-.707-.707a1 1 0 00-1.414 0L8 8.899 3.757 4.657a1 1 0 00-1.414 0l-.707.707z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when rendering all fields renders correctly  1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: border,box-shadow;
  border: 1px solid #E8EDEB;
  box-shadow: 0 4px 10px -4px rgba(0,30,43,0.3);
  background-color: white;
  color: #1C2D38;
  border-radius: 24px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  line-height: 20px;
  padding: 24px;
  min-height: 68px;
  padding: 0;
  margin-bottom: 16px;
  overflow: hidden;
}

.emotion-1 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  background-color: #F9FBFA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 16px 32px;
}

.emotion-1>*:not(:last-child) {
  margin-right: 16px;
}

@media only screen and (max-width: 480px) {
  .emotion-1 {
    padding: 16px;
  }
}

.emotion-3 {
  font-family: Euclid Circular A,‘Helvetica Neue’,Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  border-radius: 5px;
  height: 18px;
  padding-left: 6px;
  padding-right: 6px;
  text-transform: uppercase;
  border: 1px solid;
  letter-spacing: 1px;
  background-color: #E1F7FF;
  border-color: #C3E7FE;
  color: #1254B7;
}

.emotion-4 {
  color: #001E2B;
}

@media only screen and (max-width: 480px) {
  .emotion-4 {
    word-break: break-all;
  }
}

.emotion-6 {
  top: -5px;
  margin-left: 4px;
  position: relative;
}

.emotion-7 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #889397;
}

.emotion-8 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  color: #89979B;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
}

.emotion-8:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-8:active:before,
.emotion-8:hover:before,
.emotion-8:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:active,
.emotion-8:hover {
  color: #3D4F58;
}

.emotion-8:active:before,
.emotion-8:hover:before {
  background-color: #E7EEEC;
}

.emotion-8:focus {
  color: #1A567E;
}

.emotion-8:focus:before {
  background-color: #C5E4F2;
}

.emotion-9 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  top: -5px;
  margin-left: auto;
}

.emotion-13 {
  margin: 24px 32px;
}

@media only screen and (max-width: 480px) {
  .emotion-13 {
    margin: 16px;
  }
}

.emotion-13>p {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.emotion-15 {
  margin: unset;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
}

.emotion-15 strong,
.emotion-15 b {
  font-weight: 700;
}

<div
    class="emotion-0"
    id="get-/auth/profile"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        GET
      </div>
      <div>
        <code
          class="emotion-4 emotion-5"
        >
          /​auth/​profile
        </code>
        <span
          class="emotion-6"
        >
          <button
            aria-disabled="false"
            aria-label="Copy"
            class="emotion-7 emotion-8"
            tabindex="0"
          >
            <div
              class="emotion-9"
            >
              <svg
                aria-label="Copy Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1zm8-.928L7.257 6.498A.857.857 0 007 7.11v.688h3.01a.857.857 0 00.857-.858V4h-.717a.857.857 0 00-.6.246l-.55.54zM4.867 1H4.15a.857.857 0 00-.601.246L1.257 3.498A.857.857 0 001 4.11v.688h3.01a.857.857 0 00.857-.858V1zM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 017 13.286V12z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </span>
      </div>
      <button
        aria-disabled="false"
        aria-label="Show operation details"
        class="emotion-10 emotion-8"
        tabindex="0"
      >
        <div
          class="emotion-9"
        >
          <svg
            aria-label="Chevron Down Icon"
            class=""
            fill="none"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M1.636 5.364a1 1 0 000 1.414l4.95 4.95.707.707a1 1 0 001.414 0l.707-.707 4.95-4.95a1 1 0 000-1.414l-.707-.707a1 1 0 00-1.414 0L8 8.899 3.757 4.657a1 1 0 00-1.414 0l-.707.707z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="emotion-13 emotion-14"
    >
      <p
        class="emotion-15"
      >
        Get information about the currently logged in user.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
